cabal-version:       2.4
name:                haveibeenpwned
version:             0.1.0.0
synopsis:            Library for checking for weak/compromised passwords.
description:         This library uses the haveibeenpwned database to check for weak or compromised passwords.
bug-reports:         https://github.com/obsidiansystems/haveibeenpwned/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Obsidian Systems
maintainer:          robert.klotzner@gmx.at
copyright:           2019 Obsidian Systems LLC
category:            Web
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     HaveIBeenPwned
  build-depends:       base ^>=4.12.0.0
                       , bytestring
                       , cryptohash
                       , data-default
                       , http-client
                       , http-client-tls
                       , http-types
                       , monad-logger
                       , mtl
                       , safe
                       , text

  hs-source-dirs:      src
  default-language:    Haskell2010
